new changes inside frontend

--- a/frontend/src/Components/Layouts/Auth/User/Login.css
+++ b/frontend/src/Components/Layouts/Auth/User/Login.css
@@ -1,11 +1,13 @@
-/* App.css */
-
-/* Style for rounded inputs */
+.login-container{
+  
+}
 .form-control-rounded {
     
    
     transition: all 0.3s ease;
   }
+
+
   
   .form-control-rounded:focus {
     border-color: #4CAF50;
